@@ -12,12 +12,13 @@ use warnings;
 
 use lib 't/lib';
 
+use Cwd qw(getcwd);
 use File::Temp;
 use File::Spec;
 use Perl6::Slurp;
 use Test::RRA qw(is_file_contents);
 
-use Test::More tests => 4;
+use Test::More tests => 6;
 
 # Load the module.
 BEGIN { use_ok('App::DocKnot') }
@@ -29,11 +30,9 @@ isa_ok($docknot, 'App::DocKnot');
 # Generate the package README file to a temporary file, read it into memory,
 # and compare it to the actual README file.  This duplicates part of the
 # generate/self.t test, but via the command-line parser.
-my $tempdir       = File::Temp->newdir();
-my $output_path   = File::Temp->new(DIR => $tempdir);
-my $metadata_path = File::Spec->catfile('docs', 'metadata');
-my @generate_args = ('-m', $metadata_path, 'readme', $output_path);
-$docknot->run('generate', @generate_args);
+my $tempdir     = File::Temp->newdir();
+my $output_path = File::Temp->new(DIR => $tempdir);
+$docknot->run('generate', 'readme', $output_path);
 my $output = slurp($output_path);
 is_file_contents($output, 'README', 'Generated README from argument list');
 unlink($output_path);
@@ -41,7 +40,24 @@ unlink($output_path);
 # Do the same thing again, but using arguments from @ARGV.  Be sure to
 # stringify $output_path, or slurp() will try to read from the file descriptor
 # instead of the path and just get end of file.
-local @ARGV = ('generate', @generate_args);
+local @ARGV = ('generate', 'readme-md', $output_path);
 $docknot->run();
 $output = slurp("$output_path");
-is_file_contents($output, 'README', 'Generated README from ARGV');
+is_file_contents($output, 'README.md', 'Generated README.md from ARGV');
+
+# Save the paths to various files in the source directory.
+my $readme_path    = File::Spec->catfile(getcwd(), 'README');
+my $readme_md_path = File::Spec->catfile(getcwd(), 'README.md');
+my $metadata_path  = File::Spec->catfile(getcwd(), 'docs', 'metadata');
+
+# Generate all of the files using generate-all in a new temporary directory.
+my $tmpdir = File::Temp->newdir();
+chdir($tmpdir);
+$docknot->run('generate-all', '-m', $metadata_path);
+$output = slurp('README');
+is_file_contents($output, $readme_path, 'README from generate_all');
+$output = slurp('README.md');
+is_file_contents($output, $readme_md_path, 'README.md from generate_all');
+
+# Allow cleanup to delete our temporary directory.
+chdir(File::Spec->rootdir());
